# nadeo-api-rs

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  client.rs  core.rs  lib.rs  live.rs  meet.rs  oauth.rs  prelude.rs  test_helpers.rs  ubi_auth.rs  urls.rs
