[package]
name = "nadeo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
dotenv = "0.15.0"
parking_lot = "0.12.3"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["sync", "macros"] }
