[package]
name = "nadeo-api-rs"
version = "0.1.5"
edition = "2021"
description = "A simple wrapper for the Nadeo API"
readme = "README.md"
repository = "https://github.com/xertrov/nadeo-api-rs"
license = "Unlicense"
exclude = [".vscode/*", "*.txt", ".env"]

[dependencies]
ahash = "0.8.11"
base64 = "0.22.1"
chrono = "0.4.39"
dotenv = "0.15.0"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.22"
parking_lot = "0.12.3"
reqwest = { version = "0.12.9", features = ["json"] }
ringbuf = "0.4.7"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["sync", "macros"] }
